{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "6dd2ebbb-e02c-426a-a6bd-7e16b76bc8fd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "913988a7-c1cd-4edf-bca5-601327eb0895",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "34999eb9-d8c7-4cf6-ad4b-9f846df0d5ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "b7ec015e-6c65-4b29-8dcd-7592590fb0be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "48f07bdf-27a7-4fa3-b75c-b63b8a1dad16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "162548c8-e41f-44d7-91cc-8061d9fc35a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "8579024a-1f01-4817-95d9-8ad61d9769d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FirstWeapon",
                    "type": "Button",
                    "id": "e380a5ec-a59e-4fa7-934d-dbcc52a9a6fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondWeapon",
                    "type": "Button",
                    "id": "f3b21e4f-e102-4a8b-86c2-62be2b806f42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThirdWeapon",
                    "type": "Button",
                    "id": "8b284a6a-968e-4cd2-90e6-d5c630458df4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Axis",
                    "id": "bbe3fd95-fafe-4207-ae05-bd36350d9a79",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "474846a2-8992-45e2-8848-b0770c25cc12",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d3e3d317-ee65-4559-8c32-b3a6eadfddac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7b65a8cd-4ff9-4046-907c-642b436852cb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5fc0862-1a7a-49dc-9b20-55d00d52fe59",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a818e95a-cba4-4748-95cc-26894b724a16",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63f0b2dd-767e-4993-9b21-ea59011e26bb",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "493a354b-329d-4835-955a-fb9ffd3f486f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "067a25d2-342b-41c7-b26b-9759e337c230",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f488011-89d6-4e9c-a12a-5d924c8eaa13",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "628240cc-b3df-4d07-8c8c-e1c5e204d87a",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}